test/reverseSquare14.slq
def f[n:!â„•](x:đť”ą^n)mfreeâ‡’x;
def g[n:!â„•](x:đť”ą^n,const y:đť”ą)mfreeâ‡’x;
def main(){
	f(x,y):=();
	f[3](w,z):=(); /// error
	f[2](x):=2; /// error
	g(x,x,x):=(); /// error
	g[2](x,x,x):=(); /// error
}
